<resources>
    <string name="app_name">Blood Donor</string>
    <string name="title_activity_main4">MainActivity4</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main5">MainActivity5</string>
    <string name="username">Username</string>
    <string name="district">District</string>
    <string name="register">Register</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="contact">Contact</string>
    <string name="register_here">Register Here</string>
    <string name="be_ready_to_donate_and_save_lives_register_yourself_at_your_nearest_hospital_s_where_you_find_it_convenient_to_help_patient_by_fulfiling_their_need_of_blood">Be Ready to Donate and save lives! Register yourself at your nearest hospital(s) where you find it convenient to help patient by fulfiling their need of blood.</string>
    <string name="blood_group">Blood Group</string>
    <string name="search_for_the_blood_donors_in_your_district">Search for the blood donors in your district</string>
    <string name="location">Location</string>
</resources>